# AaS

./: .gitignore  AGENTS.md  PLAN.md  PRD.md  README.md  START.md  agent_comms.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/aas_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py  router.py
apps/api/app/api/routes/: arguments.py  streaming.py
apps/api/app/core/: config.py
apps/api/app/db/: models.py  session.py
apps/api/app/schemas/: argument.py  report.py
apps/api/app/services/: argument_engine.py  badges.py  credits.py  events.py  moderation.py  reporting.py
apps/api/app/workers/: actors.py  langgraph_scheduler.py  llm.py  runtime.py
apps/api/tests/: test_argument_engine.py  test_badges.py  test_model_provider_selection.py  test_scheduler.py
apps/web/: README.md  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/app/: page.tsx
apps/web/app/arguments/[id]/: page.tsx
apps/web/app/join/[argumentId]/: page.tsx
apps/web/app/login/: page.tsx
apps/web/lib/: api.ts  auth.ts  types.ts
apps/worker/: README.md  main.py
infra/sql/: bootstrap.sql  rls.sql
